fix(index.html): remove default year value from input field
Signed-off-by: Plamen Ivanov <paco.iwanow@gmail.com>

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -23,7 +23,7 @@
             type="number"
             id="year"
             placeholder="Enter Year"
-            value="2024"
+            value=""
             min="2008"
             max="2100"
           />
